--- a/Expensify-app/package.json
+++ b/Expensify-app/package.json
@@ -13,6 +13,7 @@
     "react": "^15.6.2",
     "react-dom": "^15.6.1",
     "react-modal": "2.2.2",
+    "react-router-dom": "4.2.2",
     "sass-loader": "7.3.1",
     "style-loader": "1.1.3",
     "validator": "^8.0.0",
