--- a/Expensify-app/package.json
+++ b/Expensify-app/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^15.6.1",
     "react-modal": "2.2.2",
     "react-router-dom": "4.2.2",
+    "redux": "3.7.2",
     "sass-loader": "7.3.1",
     "style-loader": "1.1.3",
     "validator": "^8.0.0",
